Solved the issue with pulling down the id from the database table and added some spacing to the table headers

--- a/src/CSS/stocks.css
+++ b/src/CSS/stocks.css
@@ -1,4 +1,4 @@
 .stock-header {
     text-align: center;
-    margin-top: 3rem;
+    padding: 0 1rem;
 }
